init-container-demo.yaml
  apiVersion: v1
  kind: Pod
  metadata:
    name: init-demo
  spec:
    containers:
      - name: nginx
        image: nginx
        ports:
          - containerPort: 80
        volumeMounts:
          - name: workdir
            mountPath: /usr/share/nginx/html
    # These containers are run during pod initialization
    dnsPolicy: Default
    volumes:
      - name: workdir
        emptyDir: {}
