desktop-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
spec:
  selector:
    matchLabels:
      app: auth
  replicas: 1
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth-service
          image: auth-service:latest
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: config
              mountPath: /app/config
          ports:
            - containerPort: 8011
      volumes:
        - name: config
          emptyDir: {}
---
kind: Service
apiVersion: v1
metadata:
  name: auth-service
spec:
  ports:
    - protocol: TCP
      port: 8011
      targetPort: 8011  # from config map
  type: ClusterIP
  selector:
    app: auth

---
apiVersion: v1
kind: Service
metadata:
  name: auth-service-front
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8011
      targetPort: 8011   # from config map
  selector:
    app: auth
