mongo-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-front
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 27017
  selector:
    app: mongodb
